--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nsehe",
   "private": true,
   "dependencies": {
+    "@activeadmin/activeadmin": "^2.9.0",
     "@popperjs/core": "^2.9.3",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
